# f-22a

./: .gitignore  CMakeLists.txt  CMakePresets.json  Contributors.md  F-22A.lua  IRST Pod.lua  IRST Sensor.lua  README.md  VLO Fuel Tank.lua  Weapons.lua  entry.lua
.github/workflows/: check.yaml  deploy.yaml
Cockpit/Scripts/: device_init.lua  devices.lua
Cockpit/Scripts/Systems/: Avionics.lua  Electrical_System.lua  MFD_System.lua  Weapon_System.lua
Cockpit/Scripts/UFD_LEFT/: base_page.lua
Cockpit/Scripts/UFD_RIGHT/: base_page.lua
Cockpit/Shape/: Cockpit_F-22A.EDM
EFM/: BasicEFM.sln  CMakeLists.txt
EFM/Basic_EFM_Template/: Basic_EFM_Template.cpp  Basic_EFM_Template.h  ED_FM_Template.vcxproj  F22_EFM.cpp  FM_data.h  Inputs.h  RAPTOR.cpp  Utility.h  stdafx.h
EFM/Basic_EFM_Template/include/Cockpit/: ccParametersAPI.h
EFM/Basic_EFM_Template/include/FM/: API_Declare.cpp
EFM/FM/: config.lua
EFM/include/Cockpit/: CockpitAPI_Declare.h  ccParametersAPI.h
EFM/include/FM/: wHumanCustomPhysicsAPI.h
EFM/source/: FM_data.h  Inputs.h  RAPTOR.cpp  RAPTOR.h  Utility.h  dllmain.cpp
Effects/: F-22A_overwingVapor.lua
FM/: config.lua
Input/F-22A/joystick/: default.lua
Input/F-22A/keyboard/: default.lua
Shapes/: AIM-120C7.edm  AIM-120C8.edm  AIM-120D.EDM  AIM-120D3.edm  AIM-260A.edm  F-22A.EDM  F22_IRST.edm  F22_LDTP.edm  F22_Sensor_Pod.edm  Mako_A2A_C.edm  Mako_A2G_C.edm
UnitPayloads/: F-22A.lua
Weapons/: AIM_120_C7.lua  AIM_120_C8.lua  AIM_120_D3.lua  AIM_260A.lua  AIM_9X_BLKII.lua  GBU_32.lua  MAKO_A2A_C.lua  MAKO_A2G_C.lua
